fixed issue on credits

--- a/html/app.html
+++ b/html/app.html
@@ -109,17 +109,20 @@
             <div v-if="powered_by">
               <div class="g3w-credits-block">
                 <div v-t-template="'g3wSuiteFramework'" class="credit-title-logo"></div>
-                <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
-                  <img :src="credits_logo" class="img-responsive center-block" alt="">
+                <a target="_blank" href="https://g3wsuite.gis3w.it/">
+                  <img class="g3w-suite-logo" :src="g3w_suite_logo" alt="">
                 </a>
+                <div v-t-template="'g3wSuiteDescription'" style="margin-top: 10px;"></div>
               </div>
-              <address id="address-credits" style="line-height: 2; text-align: center">
+              <div v-t-template="'productOf'" class="credit-title-logo g3w-credits-block"></div>
+              <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
+                <img :src="credits_logo" class="img-responsive center-block" alt="">
+              </a>
+              <address id="address-credits" style="line-height: 1.5; position: relative; left: 155px; margin-top: 20px;">
                 <i :class="g3wtemplate.getFontClass('marker')" aria-hidden="true"></i>
                 <span> Viale Verdi, 24 - Montecatini Terme (PT)</span></br>
                 <i :class="g3wtemplate.getFontClass('mobile')" aria-hidden="true"></i>
                 <span> +39 347 6597931</span></br>
-                <i :class="g3wtemplate.getFontClass('fax')" aria-hidden="true"></i>
-                <span> +39 0572 901639</span></br>
                 <i :class="g3wtemplate.getFontClass('mail')" aria-hidden="true">
                 </i>
                 <span><a href="mailto:info@gis3w.it" style="color:#000000"> info@gis3w.it</a></span>
