eremoved collapsed for mobile

--- a/html/viewport.html
+++ b/html/viewport.html
@@ -33,7 +33,7 @@
              <span  :class="g3wtemplate.getFontClass('back')"></span>
              <span v-t="'back'"></span>
           </div>
-          <div style="display: inline-block"  v-else-if ="backOrBackTo === 'backto'">
+          <div style="display: inline-block; margin-top:10px;"  v-else-if ="backOrBackTo === 'backto'">
             <span :class="g3wtemplate.getFontClass('back')"></span>
             <span v-t:pre="'backto'">{{ previousTitle }}</span>
           </div>
@@ -42,10 +42,6 @@
       <span v-if="state.content.closable && state.content.aside" @click="closeContent" style="margin-left: 10px;" class="g3w-span-button fa-stack fa-lg pull-right">
         <i :class="g3wtemplate.getFontClass('circle')"  class="fa-stack-2x panel-button"></i>
         <i :class="g3wtemplate.getFontClass('close')" class="fa-stack-1x panel-icon"></i>
-      </span>
-      <span v-if="showCollapseButton" class="g3w-span-button fa-stack fa-lg pull-right" @click="collapseContent">
-         <i class="fa fa-circle fa-stack-2x panel-button"></i>
-         <i :class="[collapsedContent ? g3wtemplate.getFontClass('arrow-up'): g3wtemplate.getFontClass('arrow-down')]" class="fa-stack-1x panel-icon"></i>
       </span>
       <div class="panel-title" v-if="showtitle && contentTitle">
         <span id="contenttitle">{{ contentTitle }}</span>
