--- a/html/app.html
+++ b/html/app.html
@@ -82,7 +82,7 @@
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-  <sidebar :iframe="isIframe"></sidebar>
+  <sidebar></sidebar>
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper" :style="{paddingTop: isIframe ? 0 : null}">
     <viewport :appState="appState"></viewport>
@@ -118,13 +118,12 @@
               <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
                 <img :src="credits_logo" class="img-responsive center-block" alt="">
               </a>
-              <address id="address-credits" style="line-height: 1.5; position: relative; left: 155px; margin-top: 20px;">
+              <address id="address-credits" style="line-height: 1.5; text-align: center; margin-top: 20px;">
                 <i :class="g3wtemplate.getFontClass('marker')" aria-hidden="true"></i>
-                <span> Viale Verdi, 24 - Montecatini Terme (PT)</span></br>
+                <span> Montecatini Terme - Italy</span></br>
                 <i :class="g3wtemplate.getFontClass('mobile')" aria-hidden="true"></i>
-                <span> +39 347 6597931</span></br>
-                <i :class="g3wtemplate.getFontClass('mail')" aria-hidden="true">
-                </i>
+                <span>  +39 393 8534336</span></br>
+                <i :class="g3wtemplate.getFontClass('mail')" aria-hidden="true"></i>
                 <span><a href="mailto:info@gis3w.it" style="color:#000000"> info@gis3w.it</a></span>
               </address>
             </div>
